--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,3 +22,9 @@ ol {
   color:Black;
   text-align: left;
   font size: 30;
+}
+.triangle{
+  font-family: sans-serif;
+  font-size: 45;
+  color: Blue
+}
