--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body {
   font-family: sans-serif;
   background-color: inherit;
   text-align: left;
-  background-color: violet;
+  background-color: 255;
 }
 h1 {
   color: Blue;
@@ -33,3 +33,15 @@ ul {
     text-align: left;
     font-size: 30;
   }
+  .test-box {
+    border: 4px solid red
+  }
+.image {
+  text-align: left;
+}
+.image {
+  text-align: left;
+}
+.image {
+  text-align: left;
+}
